--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "BipartiteGraph",
+            "request": "launch",
+            "mainClass": "Graphs.BipartiteGraph.java.BipartiteGraph",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "NumberOfIsland",
             "request": "launch",
             "mainClass": "Graphs.NumberOfIsland.java.NumberOfIsland",
