--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "LargestBST",
+            "request": "launch",
+            "mainClass": "Trees.LargestBST.java.LargestBST",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "BipartiteGraph",
             "request": "launch",
             "mainClass": "Graphs.BipartiteGraph.java.BipartiteGraph",
