--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
             "type": "java",
             "name": "MinimumPathSum",
             "request": "launch",
+            "mainClass": "DynamicProgramming.Tabulation.MinimumPathSum.java.MinimumPathSum",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
+            "name": "MinimumPathSum",
+            "request": "launch",
             "mainClass": "DynamicProgramming.Memoization.MinimumPathSum.java.MinimumPathSum",
             "projectName": "DSA_175c1f96"
         },
