--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MedianOfTwoArrays",
+            "request": "launch",
+            "mainClass": "BinarySearch.MedianOfTwoArrays.java.MedianOfTwoArrays",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "MinimumPathSum",
             "request": "launch",
             "mainClass": "DynamicProgramming.Tabulation.MinimumPathSum.java.MinimumPathSum",
