Dynamic_Programming(Tabulation): Added Ninja training (Multidimensional DP)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "NinjaTraining",
+            "request": "launch",
+            "mainClass": "NinjaTraining",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "Main",
             "request": "launch",
             "mainClass": "Trees.IterativeDFS.java.Main",
