--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MaximumPathSum",
+            "request": "launch",
+            "mainClass": "DynamicProgramming.Memoization.MaximumPathSum.MaximumPathSum",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "Triangle",
             "request": "launch",
             "mainClass": "DynamicProgramming.Tabulation.Triangle.Triangle",
