--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "LevelOrderSuccessor",
+            "request": "launch",
+            "mainClass": "Trees.LevelOrderSuccessor",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
+            "name": "LevelOrderSuccessor",
+            "request": "launch",
+            "mainClass": "LevelOrderSuccessor",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "BFS",
             "request": "launch",
             "mainClass": "Trees.BFS.BFS",
