--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "SimplifyPath",
+            "request": "launch",
+            "mainClass": "StacksAndQueues.SimplifyPath",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
+            "name": "SimplifyPath",
+            "request": "launch",
+            "mainClass": "SimplifyPath",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "Diameter",
             "request": "launch",
             "mainClass": "Trees.Hustle.Diameter",
