--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MaxPathSum",
+            "request": "launch",
+            "mainClass": "Trees.Blaze.MaxPathSum",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
+            "name": "CoinTransformation",
+            "request": "launch",
+            "mainClass": "Math.Breeze.CoinTransformation",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "ConcatenateStrings",
             "request": "launch",
             "mainClass": "SlidingWindowAnd2Pointers.ConcatenateStrings",
