--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "NumberOfSegments",
+            "request": "launch",
+            "mainClass": "SlidingWindowAnd2Pointers.NumberOfSegments",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "IPO",
             "request": "launch",
             "mainClass": "Heap.Nightmare.IPO",
