--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MinimumMultiplicationsToReachEnd",
+            "request": "launch",
+            "mainClass": "MinimumMultiplicationsToReachEnd",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
+            "name": "Dijkstra",
+            "request": "launch",
+            "mainClass": "Dijikstra.Dijkstra",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
+            "name": "Prims",
+            "request": "launch",
+            "mainClass": "Prims",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "ShortestPathInDAG",
             "request": "launch",
             "mainClass": "Graphs.ShortestPath.ShortestPathInDAG",
